--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "js-fundamentals",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "gulp",
-    "prestart": "npm install"
+    "start": "npm run project",
+    "project": "./node_modules/.bin/webpack-dev-server --config webpack.dev.js",
+    "build": "./node_modules/.bin/webpack --config webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-webserver": "^0.9.1",
-    "gulp-load-plugins": "^1.0.0"
+    "webpack": "4.29.6",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-server": "3.2.1"
   }
 }
